@@ -19,7 +19,10 @@
 #define RKCOMPONENT_H
 
 #include <qdict.h>
+#include <qmap.h>
 #include <qwidget.h>
+
+class RKComponentPropertyBase;
 
 /** a very low level base for RKComponent and RKComponentProperty. */
 class RKComponentBase {
@@ -77,6 +80,14 @@ protected:
 	void addChild (const QString &id, RKComponentBase *child);
 	QDict<RKComponentBase> child_map;
 	bool required;
+/** recursively fetch the current values of all properties present as direct or indirect children of this component. Used to transfer values e.g. when switching interfaces (or to store settings per plugin in the future). Values are placed in the dictionary provided (be sure to create one first!).
+@param list the list to store the object values in
+@param include_top_level include direct properties of the component in the list (or only properties of children)
+@param prefix used during recursion to provide full ids for the added objects */
+	void fetchPropertyValuesRecursive (QMap<QString, QString> *list, bool include_top_level=false, const QString &prefix=QString::null);
+/** counterpart to fetchPropertyValuesRecursive (). Tries to apply all values from the list to properties of the given names. If some keys can not be found, or do not resolve to properties, the are ignored.
+@param list a list of id->value such as generated by fetchPropertyValuesRecursive () */
+	void setPropertyValues (QMap<QString, QString> *list);
 };
 
 #include "rkcomponentproperties.h"
